@@ -6,6 +6,8 @@ $Id$
 $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyAdmin/ChangeLog $
 
 3.3.7.0 (not yet released)
+- patch #3050492 [PDF scratchboard] Cannot drag table box to the edge after
+  a page size increase, thanks to Martin Schönberger - mad05
 
 3.3.6.0 (not yet released)
 - bug #3033063 [core] Navi gets wrong db name
